src/css/navbar.css
.dropdown {
    position: fixed;
    top: 0;
    left: 0;
    width: 100%;
    margin-left: auto;
    margin-right: auto;
    display: inline-block;
    z-index: 1000;
    transition: 0.6s ease-in;
    background-color: rgba(135,206,235,0); 
}


.dropdown .dropbtn{
    margin-left: auto;
    margin-right: auto;
    padding: auto;  
    border: none;
    outline: none;
    color: black;
    background-color: inherit;
    font-family: inherit;
    transition-duration: 0.4s;
}


.dropdown:hover .dropbtn {
    opacity: 0.3;
}

  
.dropdown-content {
    visibility: hidden;
    position: absolute;
    
    background-color: royalblue; 
    background: linear-gradient(
        180deg, rgba(65, 105, 255, 1) 0%, 
        rgba(165, 42, 42, 1) 100%
    );
    width: 100%;
    height: calc(100VH - 60px);
    z-index: -1;
    opacity: 0;
    margin-top: auto;
    margin-bottom: auto;
    margin-left: auto;
    margin-right: auto;
    transition: 0.6s ease-in-out;
    transform: translateY(-40%);
    
}

.dropdown-content a {
    float: none;
    color:white;
    text-decoration: none;
    display: block;
    text-align: center;
    
}




.show {
    visibility: visible;
    opacity: 1;
    transform: translateY(0%);
    transition-delay: 500ms;
}

.button{
    background-color:transparent; /* Green */
    border: none;
    color: white;
    text-decoration: none;
    display: inline-block;
    margin: 0 0;
    transition: 0.5s ease-out;
    cursor: pointer;
    border-radius: 0%;
    width:100%;
    text-align: center;
    font-size: 35px;
    padding-top: 15px;
    padding-bottom: 15px;
    padding-left: 0%;
    padding-right: 0%;
}

.button:hover{
    color: royalblue;
    background-color: white;
    opacity: 0.65;
}

